syntax = "proto3";

package tiktok_hack;

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.tiktok_hack.proto_entity.webcast.im";

import "tiktok_hack/webcast/im/Common.proto";
import "tiktok_hack/webcast/data/User.proto";

//更新时间 : 2024-04-29
message MemberMessage{
    Common common = 1;
    User user = 2;
    string memberCount = 3;
}
